# LibraryTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  readme.md
CMake/: build_info.py  client.cmake  environment.cmake  exporting.cmake  exports.cmake  libraries.cmake  library.cmake  macros.cmake  options.cmake  packaging.cmake  packaging.py  post_lib.cmake  pre_lib.cmake  precompiled_headers.cmake  precompiled_headers.py  preparation.cmake  testing.cmake
CMake/packaging/: post_lib.cmake
CMake/templates/: installing.cmake
Client/: CMakeLists.txt  main.cpp
Dependencies/some_lib/: CMakeLists.txt
Dependencies/some_lib/include/: Lib.hpp
Dependencies/some_lib/src/: Lib.cpp
Documentation/: Doxyfile.in
Testing/TestHello/: CMakeLists.txt  test_hello.cpp
